remove server.ts

--- a/demo/jsons/apple-receipt.json
+++ b/demo/jsons/apple-receipt.json
@@ -24,7 +24,7 @@
                   {
                     "type": "image",
                     "props": {
-                      "src": "static/apple-logo.png",
+                      "src": "/apple-logo.png",
                       "alt": "Apple Logo",
                       "width": "42",
                       "height": "42"
@@ -255,7 +255,7 @@
                   {
                     "type": "image",
                     "props": {
-                      "src": "static/apple-hbo-max-icon.jpeg",
+                      "src": "/apple-hbo-max-icon.jpeg",
                       "alt": "HBO Max",
                       "width": "64",
                       "height": "64",
@@ -418,7 +418,7 @@
           {
             "type": "image",
             "props": {
-              "src": "static/apple-logo.png",
+              "src": "/apple-logo.png",
               "alt": "Apple",
               "width": "26",
               "height": "26",
