--- a/demo/jsons/vercel-invite-user.json
+++ b/demo/jsons/vercel-invite-user.json
@@ -27,7 +27,7 @@
               {
                 "type": "image",
                 "props": {
-                  "src": "static/vercel-logo.png",
+                  "src": "/vercel-logo.png",
                   "alt": "Vercel Logo",
                   "width": "40",
                   "height": "37",
@@ -120,7 +120,7 @@
                       {
                         "type": "image",
                         "props": {
-                          "src": "static/vercel-user.png",
+                          "src": "/vercel-user.png",
                           "alt": "alanturing's profile picture",
                           "width": "64",
                           "height": "64",
@@ -140,7 +140,7 @@
                       {
                         "type": "image",
                         "props": {
-                          "src": "static/vercel-arrow.png",
+                          "src": "/vercel-arrow.png",
                           "alt": "Arrow",
                           "width": "12",
                           "height": "9"
@@ -157,7 +157,7 @@
                       {
                         "type": "image",
                         "props": {
-                          "src": "static/vercel-team.png",
+                          "src": "/vercel-team.png",
                           "alt": "Enigma team logo",
                           "width": "64",
                           "height": "64",
