--- a/demo/package.json
+++ b/demo/package.json
@@ -4,14 +4,19 @@
   "description": "Standalone demo for Vane email renderer",
   "type": "module",
   "scripts": {
-    "dev": "bun --watch index.ts",
-    "start": "bun index.ts",
-    "generate": "bun generate.ts"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "zod": "^4.0.0"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.5",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.8"
   }
 }
