--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,20 +24,18 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
         with:
-          node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: demo/package-lock.json
+          bun-version: latest
 
       - name: Install dependencies
         working-directory: ./demo
-        run: npm ci
+        run: bun install
 
       - name: Build demo
         working-directory: ./demo
-        run: npm run build
+        run: bun run build
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
