--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "bun --watch src/index.ts",
     "start": "bun src/index.ts",
-    "test": "bun test"
+    "test": "bun test",
+    "guide": "bun scripts/generateGuide.ts"
   },
   "dependencies": {
     "zod": "^4.0.0"
