--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "bun --watch src/index.ts",
     "start": "bun src/index.ts",
     "test": "bun test",
-    "guide": "bun scripts/generateGuide.ts"
+    "guide": "bun scripts/generateGuide.ts",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "zod": "^4.0.0"
