--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Install root dependencies
         run: bun install
 
+      
+    - name: test
+        run: bun typecheck && bun test
 
       - name: Install demo dependencies
         working-directory: ./demo
